working decently on frontend

--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
   "homepage": "https://github.com/jjwall/Slack-App#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "mongojs": "^2.4.0",
     "morgan": "^1.8.2",
     "path": "^0.12.7",
-    "plist": "^2.1.0"
+    "firebase": "^2.4.2"
   }
 }
